--- a/index.html
+++ b/index.html
@@ -984,7 +984,9 @@
           <h2 style="margin-top:8px">Клуб «Сварог»</h2>
           <p class="muted" style="margin-top:10px">
             Москва, ул. Малыгина, 3с2<br>
-            СВАО · Бабушкинская / Медведково
+            СВАО · Бабушкинская / Медведково<br><br>
+            Проезд от платформы Лось или метро Бабушкинская: 605 маршрутка или автобус до остановки "Санаторий Светлана".<br><br>
+            От метро Медведково: маршрутное такси T80 или автобус 774 до остановки "ул. Малыгина". ул.Малыгина 3 стр2
 
 <!--            Я провожу тренировки по боксу и муай-тай в СВАО по адресу: г. Москва, <b>Малыгина 3с2</b>.-->
           </p>
@@ -993,13 +995,13 @@
               href="https://yandex.ru/maps/?rtext=~Москва,%20Малыгина%203с2"
                target="_blank"
                rel="noopener">
-              Как доехать (Яндекс)
+              Маршрут в Яндекс.Картах
             </a>
             <a class="btn"
                href="https://2gis.ru/moscow/directions?to=Москва,%20Малыгина%203с2"
                target="_blank"
                rel="noopener">
-              Как доехать (2ГИС)
+              Маршрут в 2ГИС
             </a>
           </div>
 <!--          <p class="muted" style="margin-top:14px; max-width:60ch">-->
