--- a/index.html
+++ b/index.html
@@ -645,6 +645,7 @@
           <a class="navlink" href="#format">Формат</a>
           <a class="navlink" href="#champions">Мои чемпионы</a>
           <a class="navlink" href="#wins">Достижения</a>
+          <a class="navlink" href="#social">Жизнь команды</a>
           <a class="navlink" href="#location">Как найти</a>
 
         <span class="nav-sep" aria-hidden="true"></span>
@@ -654,9 +655,9 @@
         <a class="btn btn-primary" href="tel://+79037489912" target="_blank" rel="noopener">
           +7 903 748 99 12
         </a>
-        <a class="btn btn-primary" href="https://t.me/mike_viktorov" target="_blank" rel="noopener">
-          Написать
-        </a>
+<!--        <a class="btn btn-primary" href="https://t.me/mike_viktorov" target="_blank" rel="noopener">-->
+<!--          Написать-->
+<!--        </a>-->
           </div>
       </div>
     </div>
@@ -918,8 +919,12 @@
   <!-- CONTENT -->
   <section class="section" id="content">
     <div class="container">
-      <div class="kicker">Контент</div>
-      <h2 style="margin-top:8px">Жизнь команды и лучшие видео</h2>
+      <div class="kicker">социальные сети</div>
+      <h2 style="margin-top:8px">Жизнь команды</h2>
+
+      <p class="muted" style="margin-top:10px">
+        Я регулярно делюсь фото и видео с тренировок и выступлений. Тут вы сможете поближе познакомиться с тем, как выглядит тренировочный зал, как проходят наши тренировки, посмотреть на спортсменов, с которыми вероятно вы сможете пороаботать вместе в парах.
+      </p>
 
       <div class="grid-2" style="margin-top:18px">
         <div class="card">
@@ -927,7 +932,7 @@
             <div class="icon" aria-hidden="true">IG</div>
             <div class="text">
               <b>Instagram</b>
-              <span>Больше всего контента: видео, нарезки боёв, тренировки, атмосфера.</span>
+              <span>Фото и видео с тренировок, нарезки боёв.</span>
             </div>
             <a class="btn" href="https://www.instagram.com/mishasever75/" target="_blank" rel="noopener">Открыть</a>
           </div>
@@ -938,7 +943,7 @@
             <div class="icon" aria-hidden="true">TG</div>
             <div class="text">
               <b>Telegram команды</b>
-              <span>Фото со спортсменами, тренировки, результаты, события.</span>
+              <span>Группа с последними событиями.</span>
             </div>
             <a class="btn" href="https://t.me/viktorov_team" target="_blank" rel="noopener">Открыть</a>
           </div>
@@ -977,13 +982,13 @@
   <section class="section" id="location">
 
     <div class="container">
-      <div class="kicker">Как найти</div>
+<!--      <div class="kicker">Как найти</div>-->
       <div class="grid-2">
 
         <div>
-          <h2 style="margin-top:8px">Клуб «Сварог»</h2>
+          <h2 style="margin-top:8px">Как найти</h2>
           <p class="muted" style="margin-top:10px">
-            Москва, ул. Малыгина, 3с2<br>
+            Москва, ул. Малыгина, 3с2, клуб "Сварог"<br>
             СВАО · Бабушкинская / Медведково<br><br>
             Проезд от платформы Лось или метро Бабушкинская: 605 маршрутка или автобус до остановки "Санаторий Светлана".<br><br>
             От метро Медведково: маршрутное такси T80 или автобус 774 до остановки "ул. Малыгина". ул.Малыгина 3 стр2
