--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
     .brand-title strong{font-size:13px}
     .brand-title span{font-size:12px; color:var(--muted)}
     .nav{
-      display:flex; align-items:center; gap:14px;
+      display:flex;
+      align-items:center;
+      gap:14px;
       flex-wrap:wrap;
       justify-content:flex-end;
     }
@@ -187,6 +189,11 @@
       border-radius:10px;
       border:1px solid transparent;
     }
+    .nav a,
+.nav button{
+  display:inline-flex;
+  align-items:center;
+}
     .nav a:hover{
       border-color:var(--border);
       background:rgba(255,255,255,.03);
@@ -486,6 +493,7 @@
       overflow:hidden;
     }
 
+
     /* сама картинка */
 .win-img img{
   width:100%;
@@ -599,6 +607,7 @@
       color:rgba(242,239,233,.88);
       font-size:13px;
     }
+
     .footer-links a{
       border:1px solid var(--border);
       padding:7px 10px;
@@ -650,15 +659,10 @@
 
         <span class="nav-sep" aria-hidden="true"></span>
       </nav>
-
-        <div>
-        <a class="btn btn-primary" href="tel://+79037489912" target="_blank" rel="noopener">
+        <a class="btn btn-primary" href="tel://+79037489912" target="_blank" rel="noopener" style="padding: 2px 14px;">
           +7 903 748 99 12
         </a>
-<!--        <a class="btn btn-primary" href="https://t.me/mike_viktorov" target="_blank" rel="noopener">-->
-<!--          Написать-->
-<!--        </a>-->
-          </div>
+
       </div>
     </div>
   </header>
@@ -717,7 +721,8 @@
         <p class="muted" style="margin-top:10px; max-width:56ch">
           Я работаю на результат: техника, физика, дисциплина и понятный прогресс.<br><br>
           Внимательно слежу за состоянием спортсменов и подстраиваю нагрузку индивидуально — без «ушатать на первой тренировке».<br><br>
-          Если есть сомнения по здоровью или нагрузке — напиши. Обсудим формат и подберём спокойный старт.
+          Если есть сомнения по здоровью или нагрузке — напиши. Обсудим формат и подберём спокойный старт.<br><br>
+          Я тренирую взрослых ребят, девушек, детей и могу найти подход к каждому.
         </p>
       </div>
 
