--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="yandex-verification" content="980265360d41436b" />
       <title>Бокс и тайский бокс сайт</title>
     </head>
 
