--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <meta name="yandex-verification" content="980265360d41436b" />
       <title>Бокс и тайский бокс сайт</title>
+      <!-- Yandex.Metrika counter -->
+      <script type="text/javascript">
+          (function(m,e,t,r,i,k,a){
+              m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+              m[i].l=1*new Date();
+              for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+              k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)
+          })(window, document,'script','https://mc.yandex.ru/metrika/tag.js?id=106164546', 'ym');
+
+          ym(106164546, 'init', {ssr:true, webvisor:true, trackHash:true, clickmap:true, ecommerce:"dataLayer", accurateTrackBounce:true, trackLinks:true});
+      </script>
+      <noscript><div><img src="https://mc.yandex.ru/watch/106164546" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+      <!-- /Yandex.Metrika counter -->
     </head>
 
     <body>
