--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <meta name="yandex-verification" content="980265360d41436b" />
+      <meta name="msvalidate.01" content="2D274B9F938FA29673C845A6335C008A" />
       <title>Бокс и тайский бокс сайт</title>
     </head>
 
