--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Михаил Викторов - Профессиональный тренер по боксу и тайскому боксу в Москве</title>
     <meta name="title" content="Михаил Викторов - Профессиональный тренер по боксу и тайскому боксу в Москве" />
     <meta name="description" content="Профессиональный тренер по боксу и тайскому боксу с более чем 20-летним опытом. Мастер спорта по боксу, тренер федерации тайского бокса Москвы. Индивидуальные и групповые тренировки. Воспитал чемпионов мира и России." />
-    <meta name="keywords" content="тренер по боксу, тренер по тайскому боксу, бокс Москва, тайский бокс Москва, муайтай, тренировки по боксу, индивидуальные тренировки, групповые тренировки, Михаил Викторов, бокс СВАО" />
+    <meta name="keywords" content="тренер по боксу медведково, тренер по тайскому боксу медведково, тайский бокс СВАО, муайтай СВАО, тренировки по боксу бабушкинская, тренер Михаил Викторов, бокс СВАО" />
     <meta name="author" content="Михаил Викторов" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="Russian" />
